fork the package name so I can install places

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "peerflix-server",
+  "name": "peerflix-server-r",
   "version": "0.0.21",
   "author": "Aliaksei Sapach <dreamsonic@tut.by>",
   "description": "Streaming torrent client for node.js with web ui.",
